[tool.poetry]
name = "clinica"
version = "0.7.3"
description = "Software platform for clinical neuroimaging studies"
license = "MIT"
authors = ["ARAMIS Lab"]
maintainers = ["Clinica developers <clinica-user@inria.fr>"]
readme = "README.md"
homepage = "https://www.clinica.run"
repository = "https://github.com/aramis-lab/clinica.git"
documentation =  "https://aramislab.paris.inria.fr/clinica/docs/public/latest"
keywords = [
    "bids",
    "image processing",
    "machine learning",
    "neuroimaging",
    "neuroscience"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nibabel = "^3.2.2"
nipype = ">=1.7.1,<1.8.3"
argcomplete = "^1.9.4"
pandas = "^1.4"
jinja2 = "^3"
xvfbwrapper = "*"
numpy = "^1.17"
scikit-learn = "^1.0"
nilearn = {version = "^0.9.2", extras = ["plotting"]}
colorlog = "^5"
xgboost = "*"
scipy = "^1.7"
matplotlib = "*"
niflow-nipype1-workflows = "*"
scikit-image = "^0.19"
pydicom = "*"
networkx = "*"
click = "^8"
click-option-group = "^0.5"
xlrd = "*"
openpyxl = "*"
fsspec = "*"
pydra-nipype1 = "*"
pydra = "^0.20"
pybids = "^0.15.1"
joblib = "^1.2.0"
attrs = ">=20.1.0"
cattrs = "^1.9.0"
brainstat = "^0.3.6"
pydra-bids = "^0.0.3"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.1"
mkdocs-material = ">=7.1.8"
pymdown-extensions = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"
pytest-cov = "^3.0.0"
scikit-image = "^0.19"
nibabel = "*"

[tool.poetry.scripts]
clinica = "clinica.cmdline:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
force-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
  | docs
  | clinica/lib
)/
'''

[tool.isort]
profile = "black"
