[tool.poetry]
name = "clinica"
version = "0.8.2"
description = "Software platform for clinical neuroimaging studies"
license = "MIT"
authors = ["ARAMIS Lab"]
maintainers = ["Clinica developers <clinica.run@gmail.com>"]
readme = "README.md"
homepage = "https://www.clinica.run"
repository = "https://github.com/aramis-lab/clinica.git"
documentation =  "https://aramislab.paris.inria.fr/clinica/docs/public/latest"
keywords = [
    "bids",
    "image processing",
    "machine learning",
    "neuroimaging",
    "neuroscience"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
nibabel = "^5"
nipype = ">=1.8.6"
argcomplete = "^1.9.4"
pandas = "^1.4"
jinja2 = "^3"
xvfbwrapper = "*"
numpy = "^1.17"
scikit-learn = "^1.0"
nilearn = "^0.10.3"
colorlog = "^5"
xgboost = "*"
scipy = "^1.7"
matplotlib = "*"
scikit-image = "*"
pydicom = "*"
networkx = "^2"
click = "^8"
click-option-group = "^0.5"
xlrd = "*"
openpyxl = "*"
fsspec = "*"
pydra-nipype1 = "^0.2"
pydra = "^0.22"
pybids = "^0.16"
joblib = "^1.2.0"
attrs = ">=20.1.0"
cattrs = "^1.9.0"
brainstat = "^0.3.6"
pydra-bids = "^0.0.10"
pydra-freesurfer = "^0.0.9"
pydra-petpvc="^0.0.4"
pydra-fsl = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-random-order = "*"
pytest-timeout = "*"
pytest-xdist = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.1"
mkdocs-material = ">=7.1.8"
pymdown-extensions = "*"

[tool.poetry.scripts]
clinica = "clinica.cmdline:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I001",
#    "PTH",
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["clinica"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.codespell]
summary = ''
skip = ".git,LICENSE.txt,ignore_words.txt,*.m"
quiet-level = 3
ignore-words = "ignore_words.txt"
