[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "clinica"
version = "0.9.4"
description = "Software platform for clinical neuroimaging studies"
license = "MIT"
authors = [
    { name = "ARAMIS Lab" },
]
maintainers = [
    { name = "Clinica developers", email = "clinica.run@gmail.com>" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = [
    "bids",
    "image processing",
    "machine learning",
    "neuroimaging",
    "neuroscience"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
    "nibabel (>=5)",
    "nipype (>=1.8.6)",
    "argcomplete (>=1.9.4,<2)",
    "pandas (>=2,<3)",
    "jinja2 (>=3,<4)",
    "xvfbwrapper",
    "numpy (>=2,<3)",
    "scikit-learn (>=1.0,<2)",
    "nilearn (>=0.10.3,<1.0)",
    "colorlog (>=5,<6)",
    "xgboost",
    "scipy (>=1.14,<2)",
    "matplotlib",
    "scikit-image",
    "pydicom",
    "networkx",
    "click",
    "click-option-group (>=0.5,<1.0)",
    "xlrd",
    "openpyxl",
    "fsspec",
    "pydra-nipype1",
    "pydra (>=0.22,<1.0)",
    "pybids (>=0.16,<1.0)",
    "joblib (>=1.2.0,<2.0)",
    "attrs (>=20.1.0)",
    "cattrs",
    "pydra-bids (>=0.0.10)",
    "pydra-freesurfer (>=0.0.9)",
    "pydra-petpvc (>=0.0.4)",
    "pydra-fsl (>=0.0.22)",
    "antspyx (>=0.4.2)",
    "rich (>=13.8.0)",
]

[project.urls]
homepage = "https://www.clinica.run"
documentation = "https://aramislab.paris.inria.fr/clinica/docs/public/latest"
sources = "https://github.com/aramis-lab/clinica"
issues = "https://github.com/aramis-lab/clinica/issues"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-random-order = "*"
pytest-timeout = "*"
pytest-xdist = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.1"
mkdocs-material = ">=7.1.8"
pymdown-extensions = "*"

[tool.poetry.group.optional.dependencies]
brainstat = "^0.4.2"

[project.scripts]
clinica = "clinica.cmdline:main"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I001",
#    "PTH",
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["clinica"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.codespell]
summary = ''
skip = ".git,LICENSE.txt,ignore_words.txt,*.m"
quiet-level = 3
ignore-words = "ignore_words.txt"
